Carga de ofertas activas

--- a/src/app/pages/alumno/perfil/perfil-al.component.html
+++ b/src/app/pages/alumno/perfil/perfil-al.component.html
@@ -2,7 +2,8 @@
     <div class="form-row">
         <div class="form-group col-md-6">
             <label>Nombre:</label>
-            <input type="text" class="form-control" placeholder="Nombre" formControlName="name" [class]="isValidField('name')" aria-label="Introduzca su nombre">
+            <input type="text" class="form-control" placeholder="Nombre" formControlName="name"
+                [class]="isValidField('name')" aria-label="Introduzca su nombre">
             <div class="invalid-feedback">
                 <span *ngIf="contactForm.get('name').errors?.required">
                     Por favor introduzca su nombre
@@ -16,7 +17,8 @@
         </div>
         <div class="form-group col-md-6">
             <label>Apellidos:</label>
-            <input type="text" class="form-control" placeholder="Apellido" formControlName="lastName" [class]="isValidField('lastName')" aria-label="Introduzca sus apellidos">
+            <input type="text" class="form-control" placeholder="Apellido" formControlName="lastName"
+                [class]="isValidField('lastName')" aria-label="Introduzca sus apellidos">
             <div class="invalid-feedback">
                 <span *ngIf="contactForm.get('lastName').errors?.required">
                     Por favor introduzca su apellido
@@ -32,7 +34,8 @@
     <div class="form-row">
         <div class="form-group col-md-6">
             <label>DNI:</label>
-            <input type="text" class="form-control" placeholder="DNI" formControlName="dni" [class]="isValidField('dni')" aria-label="Introduzca su dni">
+            <input type="text" class="form-control" placeholder="DNI" formControlName="dni"
+                [class]="isValidField('dni')" aria-label="Introduzca su dni">
             <div class="invalid-feedback">
                 <span *ngIf="contactForm.get('dni').errors?.required">
                     Por favor introduzca su dni
@@ -47,7 +50,9 @@
         <div class="form-group col-md-6">
             <label>Fecha de nacimiento:</label>
             <div class="input-group">
-                <input type="text" class="form-control" placeholder="Fecha de nacimiento" formControlName="birthdate" ngbDatepicker #d="ngbDatepicker" [class]="isValidField('birthdate')" aria-label="Introduzca su fecha de nacimiento con el formato año-mes-día">
+                <input type="text" class="form-control" placeholder="Fecha de nacimiento" formControlName="birthdate"
+                    ngbDatepicker #d="ngbDatepicker" [class]="isValidField('birthdate')"
+                    aria-label="Introduzca su fecha de nacimiento con el formato año-mes-día">
                 <div class="input-group-append ">
                     <!--Poner icono manual-->
                     <button class="btn btn-outline-secondary" (click)="d.toggle()" type="button">
@@ -67,7 +72,8 @@
     <div class="form-row">
         <div class="form-group col-md-6">
             <label>Telefono móvil:</label>
-            <input type="text" formControlName="phone" class="form-control" [class]="isValidField('phone')" aria-label="Introduzca su teléfono móvil">
+            <input type="text" formControlName="phone" class="form-control" [class]="isValidField('phone')"
+                aria-label="Introduzca su teléfono móvil">
             <div class="invalid-feedback">
                 <span *ngIf="contactForm.get('phone').errors?.required">
                     Debe introducir un número de móvil
@@ -81,7 +87,8 @@
         </div>
         <div class="form-group col-md-6">
             <label>Familia:</label>
-            <select formControlName="area" class="form-control" [class]="isValidField('area')" aria-label="Seleccione su modulo">
+            <select formControlName="area" class="form-control" [class]="isValidField('area')"
+                aria-label="Seleccione su modulo">
                 <option *ngFor="let area of parent" value="{{area.id}}">{{area.description}}</option>
             </select>
             <div class="invalid-feedback">
@@ -93,7 +100,8 @@
     </div>
     <div class="form-group">
         <label>Aptitudes:</label>
-        <textarea rows="3" class="form-control" formControlName="aptitudes" [class]="isValidField('aptitudes')" aria-label="Introduzca sus aptitudes"></textarea>
+        <textarea rows="3" class="form-control" formControlName="aptitudes" [class]="isValidField('aptitudes')"
+            aria-label="Introduzca sus aptitudes"></textarea>
         <div class="invalid-feedback">
             <span *ngIf="contactForm.get('aptitudes').errors?.required">
                 Por favor introduzca sus aptitudes
