--- a/src/app/shared/sidebar/sidebar.component.html
+++ b/src/app/shared/sidebar/sidebar.component.html
@@ -9,10 +9,10 @@
     <nav class="list-group">
         <ul>
             <li>
-                <a routerLink="../perfil" class="dropdown-toggle collapsed">
+                <a routerLink="../perfil">
                     <svg class="bi text-info" width="20" height="20" fill="currentColor">
-            <use xlink:href="bootstrap-icons.svg#person" />
-          </svg> Perfil
+                        <use xlink:href="bootstrap-icons.svg#person" />
+                    </svg> Perfil
                 </a>
                 <!--
                 <ul class="list-unstyled collapse" id="profile-submenu">
@@ -22,28 +22,28 @@
                         <a *ngIf="rol_id==2" href="#">Ver perfil</a>
                         <a *ngIf="rol_id==3" routerLink="../perfil">Ver perfil</a>
                         <a *ngIf="rol_id==4" href="../perfil">Ver perfil</a>
-            </li>
-            <li>
-                <a href="#">Page 2</a>
-            </li>
-            <li>
-                <a href="#">Page 3</a>
-            </li>
-        </ul>-->
+                    </li>
+                    <li>
+                        <a href="#">Page 2</a>
+                    </li>
+                    <li>
+                        <a href="#">Page 3</a>
+                    </li>
+                </ul>-->
             </li>
 
             <li>
                 <a href="#offer-submenu" data-toggle="collapse" aria-expanded="false" class="dropdown-toggle">
                     <svg class="bi text-info" width="20" height="20" fill="currentColor">
-            <use xlink:href="bootstrap-icons.svg#clipboard-data" />
-          </svg> Ofertas
+                        <use xlink:href="bootstrap-icons.svg#clipboard-data" />
+                    </svg> Ofertas
                 </a>
-                <ul class="collapse list-unstyled" id="offer-submenu">
+                <ul *ngIf="rol_id==3" class="collapse list-unstyled" id="offer-submenu">
                     <li>
-                        <a routerLink="../ofertas">Mis ofertas</a>
+                        <a routerLink="../ofertas">Ofertas</a>
                     </li>
                     <li>
-                        <a href="#">Page 2</a>
+                        <a href="#">Mis ofertas</a>
                     </li>
                     <li>
                         <a href="#">Page 3</a>
@@ -53,8 +53,8 @@
             <li>
                 <a href="#company-submenu" data-toggle="collapse" aria-expanded="false" class="dropdown-toggle">
                     <svg class="bi text-info" width="20" height="20" fill="currentColor">
-            <use xlink:href="bootstrap-icons.svg#briefcase" />
-          </svg> Empresas
+                        <use xlink:href="bootstrap-icons.svg#briefcase" />
+                    </svg> Empresas
                 </a>
                 <ul class="collapse list-unstyled" id="company-submenu">
                     <li>
