--- a/src/app/pages/admin/admin-dashboard/admin-dashboard.component.html
+++ b/src/app/pages/admin/admin-dashboard/admin-dashboard.component.html
@@ -3,24 +3,20 @@
   <!-- Sidebar -->
   <app-sidebar></app-sidebar>
 
-  <!-- Page Content -->
+  <!-- Contenido de la pagina -->
   <div id="page-content-wrapper">
-    <!-- Button close Sidebar -->
+    <!-- Botón para cerrar el sidebar -->
     <a class="btn" id="menu-toggle">
       <svg class="bi text-info" width="32" height="32" fill="currentColor">
         <use xlink:href="bootstrap-icons.svg#grid-3x3-gap" />
       </svg>
     </a>
+    <div class="container" *ngIf="isLoaded == false">
+      <app-load-spinner></app-load-spinner>
+    </div>
 
     <div class="container-fluid">
-      <h1 class="mt-4">Dashboard Admin</h1>
-      <p>The starting state of the menu will appear collapsed on smaller screens, and will appear non-collapsed on
-        larger screens. When toggled using the button below, the menu will change.</p>
-      <p>Make sure to keep all page content within the <code>#page-content-wrapper</code>. The top navbar is optional,
-        and just for demonstration. Just create an element with the <code>#menu-toggle</code> ID which will toggle the
-        menu when clicked.</p>
+      <app-users-crud></app-users-crud>
     </div>
-    
   </div>
-
 </div>
