--- a/src/app/pages/admin/admin-dashboard/admin-dashboard.component.html
+++ b/src/app/pages/admin/admin-dashboard/admin-dashboard.component.html
@@ -11,9 +11,9 @@
         <use xlink:href="bootstrap-icons.svg#grid-3x3-gap" />
       </svg>
     </a>
-    <div class="container" *ngIf="isLoaded == false">
+    <!--<div class="container" *ngIf="isLoaded == false">
       <app-load-spinner></app-load-spinner>
-    </div>
+    </div>-->
 
     <div class="container-fluid">
       <app-users-crud></app-users-crud>
