--- a/src/app/shared/navbar/navbar.component.html
+++ b/src/app/shared/navbar/navbar.component.html
@@ -12,7 +12,7 @@
     <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
         <ul class="navbar-nav">
             <li *ngIf="!isLogin()" class="nav-item">
-                <a class="nav-link" routerLink="/login">Login</a>
+                <a class="nav-link" routerLink="./login">Login</a>
             </li>
             <li *ngIf="!isLogin()" class="nav-item">
                 <a class="nav-link" routerLink="/registro">Registro</a>
