--- a/src/app/shared/sidebar/sidebar.component.html
+++ b/src/app/shared/sidebar/sidebar.component.html
@@ -1,4 +1,9 @@
 <div class="bg-light border-right" id="sidebar-wrapper">
+    <a class="btn col" id="closeBtn">
+        <svg class="bi" width="32" height="32" fill="currentColor">
+            <use xlink:href="bootstrap-icons.svg#x" />
+        </svg>
+    </a>
     <!-- Profile image -->
     <div class="sidebar-img border-bottom bg-info d-flex flex-column align-items-center">
         <img src="/assets/img_profile.jpeg" alt="imagen_perfill" class="rounded-circle" width="80px">
