--- a/src/app/pages/admin/users-crud/users-crud.component.html
+++ b/src/app/pages/admin/users-crud/users-crud.component.html
@@ -5,15 +5,15 @@
             <div class="card w-100 mb-4 shadow">
                 <div class="card-header bg-info">
                     <div class="d-flex align-items-center">
-                        <h2 class="card-title text-white font-weight-bold my-2 mr-3">Usuarios</h2>                    
+                        <h2 class="card-title text-white font-weight-bold my-2 mr-3">Usuarios</h2>
                     </div>
                 </div>
                 <div class="card-body mt-2">
                     <div class="row">
-                        <div class="col-sm-6" *ngFor="let user of users">
+                        <div class="col-sm-12 col-md-6" *ngFor="let user of users">
                             <div class="card m-2 mb-4 border-info shadow">
                                 <div class="card-body">
-                                    <div class="row mb-4">
+                                    <div class="row">
                                         <div class="col">
                                             <p class="text-info">
                                                 Usuario {{user.id}}
@@ -21,40 +21,47 @@
                                             <p class="card-text">
                                                 Email: {{ user.email }}
                                             </p>
-                                            <p>
-                                                Activo: {{ user.isActive }}
+                                            <p *ngIf="user.isActive == 1">
+                                                Activado: Si
+                                            </p>
+                                            <p *ngIf="user.isActive == 0">
+                                                Activado: No
                                             </p>
                                         </div>
-                                    </div>                                    
+                                    </div>
                                 </div>
                                 <div class="card-footer p-0">
                                     <div class="btn-group w-100">
-                                        <button type="button" class="btn btn-info rounded-0">
+                                        <button type="button" title="Editar usuario" class="btn btn-info rounded-0">
                                             <svg class="bi" width="26" height="26" fill="currentColor"
                                                 (click)=userUpdate(user)>
                                                 <use xlink:href="bootstrap-icons.svg#pencil" />
                                             </svg>
-                                        </button>                                        
-                                        <button *ngIf="loginService.user.user_id != user.id"  type="button" class="btn btn-info rounded-0">
+                                        </button>
+                                        <button [disabled]="loginService.user.user_id == user.id" type="button"
+                                            title="Eliminar usuario" class="btn btn-danger rounded-0">
                                             <svg class="bi" width="26" height="26" fill="currentColor"
                                                 (click)=userDelete(user.id)>
                                                 <use xlink:href="bootstrap-icons.svg#x" />
                                             </svg>
                                         </button>
-                                        <button *ngIf="user.isActive == 1" type="button" class="btn btn-success rounded-0">
+                                        <button [disabled]="loginService.user.user_id == user.id"
+                                            title="Desactivar usuario" *ngIf="user.isActive == 1" type="button"
+                                            class="btn btn-success rounded-0">
                                             <svg class="bi" width="26" height="26" fill="currentColor"
                                                 (click)=userDesactive(user.id)>
                                                 <use xlink:href="bootstrap-icons.svg#check-square" />
                                             </svg>
                                         </button>
-                                        <button *ngIf="user.isActive == 0" type="button" class="btn btn-danger rounded-0">
+                                        <button *ngIf="user.isActive == 0" type="button" title="Activar usuario"
+                                            class="btn btn-danger rounded-0">
                                             <svg class="bi" width="26" height="26" fill="currentColor"
                                                 (click)=userActive(user.id)>
                                                 <use xlink:href="bootstrap-icons.svg#square" />
                                             </svg>
                                         </button>
                                     </div>
-                                </div>                                
+                                </div>
                             </div>
                         </div>
                     </div>
