--- a/src/app/shared/sidebar/sidebar.component.html
+++ b/src/app/shared/sidebar/sidebar.component.html
@@ -43,10 +43,10 @@
                         <a routerLink="../ofertas">Mis ofertas</a>
                     </li>
                     <li>
-                        <a href="#">Page 2</a>
+                        <a href="#">Candidatos</a>
                     </li>
                     <li>
-                        <a href="#">Page 3</a>
+                        <a href="#">3</a>
                     </li>
                 </ul>
             </li>
@@ -54,11 +54,11 @@
                 <a href="#company-submenu" data-toggle="collapse" aria-expanded="false" class="dropdown-toggle">
                     <svg class="bi text-info" width="20" height="20" fill="currentColor">
             <use xlink:href="bootstrap-icons.svg#briefcase" />
-          </svg> Empresas
+          </svg> Alumnos
                 </a>
                 <ul class="collapse list-unstyled" id="company-submenu">
                     <li>
-                        <a href="#">Page 1</a>
+                        <a routerLink="../verAlumnos">Ver alumnos</a>
                     </li>
                     <li>
                         <a href="#">Page 2</a>
