--- a/src/app/pages/company/view-profile/view-profile.component.html
+++ b/src/app/pages/company/view-profile/view-profile.component.html
@@ -1,14 +1,27 @@
-<div class="container my-3">
-    <div class="row justify-content-center">
-        <div class="col-10">
-            <div class="card">
-                <div class="card-header  bg-info ">
-                    <h2 class="card-title text-white mb-0">Perfil</h2>
-                </div>
-                <div class="card-body">
+<div class="d-flex" id="wrapper">
+    <!-- Sidebar -->
+    <app-sidebar></app-sidebar>
+    <!-- Contenido de la pagina -->
+    <div id="page-content-wrapper">
+        <!-- Botón para cerrar el sidebar -->
+        <a class="btn" id="menu-toggle">
+            <svg class="bi text-info" width="32" height="32" fill="currentColor">
+                <use xlink:href="bootstrap-icons.svg#grid-3x3-gap" />
+            </svg>
+        </a>
+        <div class="container my-3">
+            <div class="row justify-content-center">
+                <div class="col-10">
+                    <div class="card">
+                        <div class="card-header  bg-info ">
+                            <h2 class="card-title text-white mb-0">Perfil</h2>
+                        </div>
+                        <div class="card-body">
 
-                    <app-crear-perfil *ngIf="can" [parent]="data">
-                    </app-crear-perfil>
+                            <app-crear-perfil *ngIf="can" [parent]="data">
+                            </app-crear-perfil>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
