Activación y desactivación de usuarios

--- a/src/app/shared/sidebar/sidebar.component.html
+++ b/src/app/shared/sidebar/sidebar.component.html
@@ -1,13 +1,13 @@
 <div class="bg-light border-right" id="sidebar-wrapper">
     <a class="btn col" id="closeBtn">
         <svg class="bi" width="32" height="32" fill="currentColor">
-            <use xlink:href="bootstrap-icons.svg#x" />
+            <use xlink:href="bootstrap-icons.svg#arrow-left" />
         </svg>
     </a>
     <!-- Profile image -->
     <div class="sidebar-img border-bottom bg-info d-flex flex-column align-items-center">
         <img src="/assets/img_profile.jpeg" alt="imagen_perfill" class="rounded-circle" width="80px">
-        <p class="font-weight-bold text-white pt-1 mb-0">Luis Quesada</p>
+        <p class="font-weight-bold text-white pt-1 mb-0">Pepe Pelaez</p>
     </div>
 
     <!-- Menu -->
@@ -17,7 +17,14 @@
                 <a routerLink="../dashboard">
                     <svg class="bi text-info" width="20" height="20" fill="currentColor">
                         <use xlink:href="bootstrap-icons.svg#person" />
-                    </svg> Usuarios
+                    </svg>
+                    Usuarios
+                </a>
+                <a routerLink="../ciclos">
+                    <svg class="bi text-info" width="20" height="20" fill="currentColor">
+                        <use xlink:href="bootstrap-icons.svg#briefcase" />
+                    </svg>
+                    Ciclos
                 </a>
             </li>
         </ul>
