--- a/src/app/pages/admin/users-crud/users-crud.component.html
+++ b/src/app/pages/admin/users-crud/users-crud.component.html
@@ -49,14 +49,14 @@
                                             title="Desactivar usuario" *ngIf="user.isActive == 1" type="button"
                                             class="btn btn-success rounded-0">
                                             <svg class="bi" width="26" height="26" fill="currentColor"
-                                                (click)=userDesactive(user.id)>
+                                                (click)=userActive(user.id,0)>
                                                 <use xlink:href="bootstrap-icons.svg#check-square" />
                                             </svg>
                                         </button>
                                         <button *ngIf="user.isActive == 0" type="button" title="Activar usuario"
                                             class="btn btn-danger rounded-0">
                                             <svg class="bi" width="26" height="26" fill="currentColor"
-                                                (click)=userActive(user.id)>
+                                                (click)=userActive(user.id,1)>
                                                 <use xlink:href="bootstrap-icons.svg#square" />
                                             </svg>
                                         </button>
